src/components/business/Footer/Footer.module.scss
.footer {
  padding: 9.07rem 0 8.1rem;

  .content {
    max-width: 46.6rem;
    margin: auto;
  }

  .links {
    display: flex;
    justify-content: space-between;
  }

  .subscribeBtn {
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
    font: inherit;
    font-size: inherit;
    letter-spacing: inherit;
    color: inherit;
    text-transform: uppercase;

    &:hover {
      text-decoration: underline;
    }
  }

  .copyrights {
    color: #979797;
    text-transform: lowercase;
    margin-top: 2.7rem;
    text-align: center;
  }
}

